[package]
name = "gtk4_commonmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syntect = "5.0.0"
gtk = { package = "gtk4", version = "0.6.2", features = ["v4_8"] }
markdown = "1.0.0-alpha.7"
html2pango = "0.5.0"
anyhow = "1.0.69"
numerals = "0.1.4"
pad = "0.1.6"
log = "0.4.17"

[dev-dependencies]
relm4 = { version = "0.6.0-alpha.1", features = ["libadwaita"]}
relm4-components = "0.6.0-alpha.1"
tokio = { version = "1.25.0", features = ["rt", "macros"] }
log = "0.4.17"
simplelog = "0.12.0"

[[example]]
name = "simple"
path = "examples/simple.rs"
